crates/llm-wiki-schema/tests/snapshots/real_skills__knowledge-lint_codex.snap
---
source: crates/llm-wiki-schema/tests/real_skills.rs
expression: snapshot
---
---
name: knowledge-lint
description: Run a lint pass on an LLM Wiki project. Use when Codex is asked to lint the wiki, scan for contradictions, stale claims, orphan pages, missing cross-references, or fix wiki bookkeeping issues directly.
---

# Knowledge Lint

## Purpose

Run a lint pass over the current project's wiki and fix real bookkeeping
problems directly.

## Behavior

1. Require `wiki/index.md` in the current working directory. If it is missing,
   tell the user the project has not been initialized with the LLM Wiki
   framework.
2. Before changing anything, read `wiki/index.md`,
   `project_guidelines.md` if present, otherwise `project_guidelines.template.md`,
   and the relevant wiki pages implicated by candidate issues.
3. Look for contradictions between wiki pages, stale statuses or claims,
   orphan pages not linked from `wiki/index.md`, missing cross-references
   between related pages, and index entries that are missing, wrong, or stale.
4. Read the minimum set of pages needed to confirm each issue.
5. If an issue is clear and mechanical, fix it directly. If pages make
   conflicting substantive claims and the correct answer is not documented
   anywhere, stop and ask the user to resolve the conflict.
6. Update `wiki/index.md` when the catalog needs correction.
7. Append a `lint` entry to `wiki/log.md` listing issues found, pages updated,
   and outstanding questions.

## Invocation

Use normal language or an explicit skill invocation:

- `$knowledge-lint lint the wiki`
- `$knowledge-lint scan for stale statuses`

Dispatcher aliases:
- `$knowledge lint`


## Notes

Prefer narrow edits over broad rewrites. Report residual risk or unanswered
conflicts clearly.

--- agents/openai.yaml ---
interface:
  display_name: "Knowledge Lint"
  short_description: "Scan and fix wiki consistency issues."
  default_prompt: "Use $knowledge-lint to scan the wiki for contradictions, stale claims, and missing cross-references."
