crates/llm-wiki-schema/tests/snapshots/real_skills__knowledge_codex.snap
---
source: crates/llm-wiki-schema/tests/real_skills.rs
expression: snapshot
---
---
name: knowledge
description: Dispatch knowledge operations for the LLM Wiki framework. Use when the user invokes the knowledge namespace, asks for knowledge init/query/ingest/research/lint, or wants one explicit command-like entry point for framework operations in Codex.
---

# Knowledge

## Purpose

Provide one explicit command-like namespace for LLM Wiki framework operations
in Codex.

## Behavior

1. Support explicit knowledge-namespace invocation and normal language.
2. If the user invokes the namespace without an operation, list the supported
   operations and ask which one they want.
3. Route `init` to the `init-project` skill and treat remaining text as the
   optional target path or setup request.
4. Route `query` to `knowledge-query` and treat remaining text as the required
   project question.
5. Route `ingest` to `knowledge-ingest` and treat remaining text as an
   optional explicit source path.
6. Route `research` to `knowledge-research` and treat remaining text as the
   research request, source mode, or query.
7. Route `lint` to `knowledge-lint`.
8. If the operation is unknown, report the valid options: `init`, `query`,
   `ingest`, `research`, and `lint`.

## Invocation

Use the dispatcher explicitly:

- `$knowledge init /path/to/project`
- `$knowledge query what is D5 on the roadmap?`
- `$knowledge ingest raw/meeting-notes.md`
- `$knowledge research docs.example.com auth tokens`
- `$knowledge lint the wiki`

## Notes

Direct skill names remain valid. The namespace exists to give the framework a
predictable explicit command surface without relying on unsupported product
slash commands.

--- agents/openai.yaml ---
interface:
  display_name: "Knowledge"
  short_description: "Route wiki operations through $knowledge."
  default_prompt: "Use $knowledge to query what is currently documented."
