crates/llm-wiki-schema/tests/snapshots/real_skills__wiki-ingest_codex.snap
---
source: crates/llm-wiki-schema/tests/real_skills.rs
expression: snapshot
---
---
name: wiki-ingest
description: Ingest explicit raw source material into an LLM Wiki project. Use when Codex is asked to process files or directories into the wiki, add new information from raw/ to project knowledge, compile notes, PRDs, specs, research, transcripts, code observations, images, or PDFs into typed wiki pages, or update wiki/index.md and wiki/log.md after new raw sources arrive.
---

# Wiki Ingest

## Purpose

Compile source material into the project wiki so future answers can use
organized, cited knowledge instead of re-reading raw sources.

## Behavior

1. Require `wiki/index.md` in the current working directory. If it is missing,
   tell the user to initialize the project with the LLM Wiki framework first.
2. If the user provides URLs or asks to search the web or a site, use
   `wiki-research` first so fetched material is saved into `raw/` before
   ingest.
3. If the user provides a path outside `raw/`, copy it into `raw/` under an
   appropriate subdirectory by source type or date. If it is already inside
   `raw/`, ingest it in place. If it is a directory, process contained sources
   one by one.
4. If no path is provided, read `wiki/log.md`, identify raw files that do not
   appear in prior ingest log entries, and ask whether to ingest all or a
   subset.
5. Before processing sources, read `wiki/index.md`, `project_guidelines.md`
   when present, and existing wiki pages that appear to cover the source
   topic.
6. Process one source completely before moving to the next. Extract key facts,
   claims, entities, systems, APIs, relationships, implied decisions, open
   questions, uncertainties, and status information.
7. For each significant finding, update an existing page when it already
   covers the entity or topic; otherwise create a new page. Choose document
   type by role: spec, decision, proposal, roadmap, plan, experiment, eval,
   checklist, or reference.
8. Every wiki page must include Document Class, Status, Date, Category, Scope,
   Sources, and Related when useful.
9. Do not silently overwrite conflicting wiki content. If the new source
   contradicts an existing page, show the conflict and ask the user which
   claim is correct before updating.
10. Update `wiki/index.md` for every created or modified page, append an
    `ingest` entry to `wiki/log.md`, and run `qmd embed -f` when QMD is
    available and configured.

## Invocation

Use normal language or an explicit skill invocation:

- `$wiki-ingest raw/product/prd.md`
- `$wiki-ingest` to find un-ingested sources under `raw/`

Dispatcher aliases:
- `$wiki ingest`


## Notes

Report the number of sources ingested, pages created, pages updated,
contradictions found and resolved, and any gaps that need more source
material.

--- agents/openai.yaml ---
interface:
  display_name: "Wiki Ingest"
  short_description: "Compile raw sources into wiki pages."
  default_prompt: "Ingest new raw source material into the project wiki."
