crates/llm-wiki-schema/tests/snapshots/real_skills__wiki-init_codex.snap
---
source: crates/llm-wiki-schema/tests/real_skills.rs
expression: snapshot
---
---
name: wiki-init
description: Create or update a software project with the LLM Wiki project management framework. Use when Codex is asked to initialize a new project, scaffold a project knowledge base, add the framework to an existing codebase, or run the framework bootstrap flow.
---

# Init Project

## Purpose

Collect project setup answers, then delegate deterministic scaffolding to the
`llm-wiki` binary.

## Behavior

1. Determine the target path; default to the current working directory.
2. Ask for six values: project name, one-sentence description, blueprint,
   optional pack overrides, whether this is an existing codebase, and optional
   initial source paths.
3. Validate that required answers are present. Accepted blueprints are
   `generic`, `web-product`, `library-sdk`, `ml-research`, `ops-infra`,
   `security`, `research`, and `custom`. Accepted packs are `api`,
   `frontend`, `library`, `ml`, `data`, `ops`, `ops-lite`, `security`,
   `research`, and `qmd-rs-scale`.
4. Run:
   `llm-wiki init <path> --non-interactive --name <name> --description <description> --blueprint <blueprint>`
   Add one `--pack <pack>` flag per explicit pack override; omit `--pack` to
   use the blueprint defaults. Add `--existing` when appropriate. Add one
   `--initial-sources <path>` flag per supplied source.
5. Report the command result. If sources were copied, ask whether to run
   `wiki-ingest` now; only ingest when the user agrees.

## Invocation

Use normal language or an explicit skill invocation:

- `$wiki-init /path/to/project`
- `$wiki-init` to initialize the current directory

Dispatcher aliases:
- `$wiki init`


## Notes

The binary owns scaffolding, template processing, collision checks, and source
copying. The agent owns conversation, validation, and the optional ingest
handoff.

--- agents/openai.yaml ---
interface:
  display_name: "Init Project"
  short_description: "Bootstrap or update an LLM Wiki project."
  default_prompt: "Initialize or update this project with the LLM Wiki framework."
